[package]
name = "age-flake-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive", "env"] }
nix = { version = "0.26.2", features = ["user", "fs", "mount"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_with = "3.0.0"
thiserror = "1.0.43"
