[package]
name = "credible"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.9.2", features = [ "armor", "async", "cli-common", "ssh" ] }
async-trait = "0.1.72"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
clap = { version = "4.3.12", features = ["derive", "env"] }
futures = "0.3.28"
lazy_static = "1.4.0"
nix = { version = "0.26.2", features = ["user", "fs", "mount"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_with = "3.0.0"
serde_yaml = "0.9.25"
signal-hook = "0.3.17"
tempfile = "3.7.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-pipe = "0.2.12"
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["compat"] }

[target.'cfg(target_os = "linux")'.dependencies]
block-utils = "0.11.0"
